fixed css bug with result spacing

--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -105,7 +105,7 @@ svg {
     background-size: 100% 100%;
     box-shadow: 2px 2px 5px 2px rgba($dark-grey, .4);
 
-    &:nth-child(odd) {
+    &:nth-child(even) {
       margin-right: 0;
     }
 
